syntax = "proto3";

package pb;

message DeliverMeta {
  bytes lastDeliverBlockHash = 1;
  int64 lastDeliverBlockHeight = 2;
}

message QueryMeta {
  bytes lastQueryBlockHash = 1;
  int64 lastQueryBlockHeight = 2;
}
